# testcontainers-demo-generator

./: .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  demo_app.md  demo_implementation.md  documentation.md  pyproject.toml  requirements.txt  setup.py  test_demo_app.md  testcontainers_research.md
.devcontainer/: Dockerfile  devcontainer.json
src/github/: testgenerator.py
src/testcontainers_demo_generator/: crew.py  main.py
src/testcontainers_demo_generator/config/: agents.yaml  tasks.yaml
